[gd_scene load_steps=4 format=3 uid="uid://bryfmgmsw1qjt"]

[ext_resource type="Script" path="res://components/Healthbar.gd" id="1_wjarc"]
[ext_resource type="Texture2D" uid="uid://c830ma7utkri1" path="res://ui/healthbar/tile_0044.png" id="2_xlmyy"]
[ext_resource type="Texture2D" uid="uid://bit4l0f8qf8hp" path="res://ui/healthbar/tile_0046.png" id="3_botqp"]

[node name="Healthbar" type="Node2D"]
script = ExtResource("1_wjarc")
heart1 = ExtResource("2_xlmyy")
heart0 = ExtResource("3_botqp")

[node name="heart1" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(14, 12)
scale = Vector2(2, 2)
texture = ExtResource("2_xlmyy")

[node name="heart2" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(46, 12)
scale = Vector2(2, 2)
texture = ExtResource("2_xlmyy")

[node name="heart3" type="Sprite2D" parent="."]
texture_filter = 3
position = Vector2(78, 12)
scale = Vector2(2, 2)
texture = ExtResource("2_xlmyy")
